server for rating company finish

--- a/site/index.html
+++ b/site/index.html
@@ -1,1 +1,17 @@
-itl
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Billy's company</title>
+</head>
+<body>
+    <h1>Whats up, welcome to my company</h1>
+    <ol type = "instructions">
+        <li>Go to /ratings for our company ratings</li>
+        <li>Go to /profile/{person}/{page} for more info on employees</li>
+        <li>Go to /rate/{department}/{score} to rate a particular department</li>
+    </ol>
+</body>
+</html>
+
