Mood website in progress

--- a/site/index.html
+++ b/site/index.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billy's company</title>
+    <title>Mood Fixer</title>
 </head>
 <body>
-    <h1>Whats up, welcome to my company</h1>
-    <ol type = "instructions">
-        <li>Go to /ratings for our company ratings</li>
-        <li>Go to /profile/{person}/{page} for more info on employees</li>
-        <li>Go to /rate/{department}/{score} to rate a particular department</li>
-    </ol>
+    <h1>Welcome to MoodFixer</h1>
+    <h3>a server where you can update how you are doing,</h3>
+    <h3>as well as see how others are doing</h3>
+    <ul type = "instructions">
+        <li>Go to /overall to see how you and others are feeling!</li>
+        <li>Go to /mood/{person}/{rating} to rate your mood!</li>
+        <li>Go to /assessment/{person} to find out how a particular person is doing!</li>
+    <h2>Resources</h2>
+        <a href="code.html">Click Here</a>
+    </ul>
 </body>
 </html>
 
